<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="no_poops">No Poops Yet</string>
    <string name="app_name">Poop At Work</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="logo_label">POOPIN TIME!</string>
    <string name="startButton_label">Start Poopin!</string>
    <string name="time_label">Time:</string>
    <string name="earned_label">Earned:</string>
    <string name="finishedButton_label">All Done!</string>
    <string name="hourlyWage_label">Hourly Wage:</string>
    <string name="calculateWage_button">Calculate Wage</string>
    <string name="save_label">Save</string>
    <string name="yearlySalary_label">Yearly Salary:</string>
    <string name="weeklyHours_label">Avg. Hours/Week</string>
    <string name="initialValue">---</string>
    <string name="chronometer_initial_format">Initial format:<xliff:g id="initial-format">%</xliff:g></string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_poop_history">PoopHistoryActivity</string>

</resources>
